--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ sysinfo.txt
 crashlytics-build.properties
 
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+UserSettings/Layouts/default-2021.dwlt
+UserSettings/EditorUserSettings.asset
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
